// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer basic strings 1`] = `
Array [
  Object {
    "colEnd": 13,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello world",
  },
]
`;

exports[`tokenizer basic strings 2`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 15,
    "colStart": 8,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
]
`;

exports[`tokenizer basic strings 3`] = `
Array [
  Object {
    "colEnd": 14,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello\\\\\\"world",
  },
]
`;

exports[`tokenizer basic strings 4`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 13,
    "colStart": 6,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
  Object {
    "colEnd": 16,
    "colStart": 14,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hi",
  },
]
`;

exports[`tokenizer basic strings 5`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "empty",
  },
  Object {
    "colEnd": 8,
    "colStart": 6,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
  Object {
    "colEnd": 13,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "nice",
  },
]
`;

exports[`tokenizer basic strings 6`] = `
Array [
  Object {
    "colEnd": 10,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 3,
    "lineStart": 1,
    "value": "hello

    world",
  },
]
`;

exports[`tokenizer basic strings 7`] = `
Array [
  Object {
    "colEnd": 13,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "emojis! 🐸⛄️",
  },
]
`;

exports[`tokenizer booleans 1`] = `
Array [
  Object {
    "colEnd": 4,
    "colStart": 0,
    "kind": "Boolean",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "true",
  },
]
`;

exports[`tokenizer booleans 2`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Boolean",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "false",
  },
]
`;

exports[`tokenizer booleans 3`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 10,
    "colStart": 6,
    "kind": "Boolean",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "true",
  },
  Object {
    "colEnd": 16,
    "colStart": 11,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
  Object {
    "colEnd": 22,
    "colStart": 17,
    "kind": "Boolean",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "false",
  },
]
`;

exports[`tokenizer chars 1`] = `
Array [
  Object {
    "colEnd": 2,
    "colStart": 0,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
]
`;

exports[`tokenizer chars 2`] = `
Array [
  Object {
    "colEnd": 2,
    "colStart": 0,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
  Object {
    "colEnd": 6,
    "colStart": 4,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "c",
  },
]
`;

exports[`tokenizer chars 3`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 8,
    "colStart": 6,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
  Object {
    "colEnd": 15,
    "colStart": 10,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
  Object {
    "colEnd": 18,
    "colStart": 16,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "c",
  },
]
`;

exports[`tokenizer chars 4`] = `
Array [
  Object {
    "colEnd": 2,
    "colStart": 0,
    "kind": "Char",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "👀",
  },
]
`;

exports[`tokenizer comments 1`] = `
Array [
  Object {
    "colEnd": 12,
    "colStart": 0,
    "kind": "Comment",
    "lineEnd": 1,
    "lineStart": 1,
    "value": " a comment!",
  },
]
`;

exports[`tokenizer comments 2`] = `
Array [
  Object {
    "colEnd": 20,
    "colStart": 0,
    "kind": "Comment",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "   another comment!",
  },
]
`;

exports[`tokenizer comments 3`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 2,
    "lineStart": 2,
    "value": "a",
  },
  Object {
    "colEnd": 14,
    "colStart": 8,
    "kind": "Comment",
    "lineEnd": 2,
    "lineStart": 2,
    "value": " wow!",
  },
  Object {
    "colEnd": 10,
    "colStart": 4,
    "kind": "Comment",
    "lineEnd": 3,
    "lineStart": 3,
    "value": "hello",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 4,
    "lineStart": 4,
    "value": "b",
  },
]
`;

exports[`tokenizer errors unclosed basic string 1`] = `
"Parse error at line 1, column 17:

Missing a closing \\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed basic string 2`] = `
"Parse error at line 1, column 12:

Missing a closing \\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed basic string 3`] = `
"Parse error at line 5, column 8:

Missing a closing \\" for string starting on line 3"
`;

exports[`tokenizer errors unclosed interpolated string 1`] = `
"Parse error at line 1, column 14:

Missing a closing \\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed interpolated string 2`] = `
"Parse error at line 1, column 13:

Missing a closing \\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed interpolated string 3`] = `
"Parse error at line 1, column 17:

Missing a closing \\"\\"\\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed triple-quoted string 1`] = `
"Parse error at line 1, column 27:

Missing a closing \\"\\"\\" for string starting on line 1"
`;

exports[`tokenizer errors unclosed triple-quoted string 2`] = `
"Parse error at line 5, column 10:

Missing a closing \\"\\"\\" for string starting on line 3"
`;

exports[`tokenizer identifiers 1`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
]
`;

exports[`tokenizer identifiers 2`] = `
Array [
  Object {
    "colEnd": 6,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello2",
  },
]
`;

exports[`tokenizer identifiers 3`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 11,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
]
`;

exports[`tokenizer identifiers 4`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "h_llo",
  },
  Object {
    "colEnd": 11,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wor_d",
  },
]
`;

exports[`tokenizer identifiers 5`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "_",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "_",
  },
  Object {
    "colEnd": 7,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
]
`;

exports[`tokenizer identifiers 6`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 2,
    "lineStart": 2,
    "value": "a",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 4,
    "lineStart": 4,
    "value": "b",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 6,
    "lineStart": 6,
    "value": "c",
  },
  Object {
    "colEnd": 10,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 6,
    "lineStart": 6,
    "value": "d",
  },
]
`;

exports[`tokenizer interpolated strings 1`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 13,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "name",
  },
  Object {
    "colEnd": 14,
    "colStart": 13,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 15,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 2`] = `
Array [
  Object {
    "colEnd": 16,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello \\\\$(name)",
  },
]
`;

exports[`tokenizer interpolated strings 3`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 11,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hi",
  },
  Object {
    "colEnd": 17,
    "colStart": 12,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "there",
  },
  Object {
    "colEnd": 18,
    "colStart": 17,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 19,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 4`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 11,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hi",
  },
  Object {
    "colEnd": 11,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 3,
    "lineStart": 3,
    "value": "there",
  },
  Object {
    "colEnd": 12,
    "colStart": 11,
    "kind": "InterpolationEnd",
    "lineEnd": 3,
    "lineStart": 3,
  },
  Object {
    "colEnd": 13,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 3,
    "lineStart": 3,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 5`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 11,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hi",
  },
  Object {
    "colEnd": 13,
    "colStart": 12,
    "kind": "LeftParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 18,
    "colStart": 13,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "there",
  },
  Object {
    "colEnd": 19,
    "colStart": 18,
    "kind": "RightParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 20,
    "colStart": 19,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 21,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 6`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 25,
    "colStart": 9,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "another string",
  },
  Object {
    "colEnd": 26,
    "colStart": 25,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 27,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 7`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 12,
    "colStart": 9,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
  Object {
    "colEnd": 29,
    "colStart": 13,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "another string",
  },
  Object {
    "colEnd": 30,
    "colStart": 29,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 31,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 8`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 10,
    "colStart": 9,
    "kind": "LeftParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 11,
    "colStart": 10,
    "kind": "LeftParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 12,
    "colStart": 11,
    "kind": "LeftParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 16,
    "colStart": 12,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "name",
  },
  Object {
    "colEnd": 17,
    "colStart": 16,
    "kind": "RightParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 18,
    "colStart": 17,
    "kind": "RightParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 19,
    "colStart": 18,
    "kind": "RightParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 20,
    "colStart": 19,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 21,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer interpolated strings 9`] = `
Array [
  Object {
    "colEnd": 7,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello ",
  },
  Object {
    "colEnd": 9,
    "colStart": 7,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 18,
    "colStart": 9,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "another ",
  },
  Object {
    "colEnd": 20,
    "colStart": 18,
    "kind": "InterpolationStart",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 33,
    "colStart": 20,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "interpolation",
  },
  Object {
    "colEnd": 34,
    "colStart": 33,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 41,
    "colStart": 9,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": ", nice",
  },
  Object {
    "colEnd": 42,
    "colStart": 41,
    "kind": "InterpolationEnd",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 43,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "",
  },
]
`;

exports[`tokenizer numbers 1`] = `
Array [
  Object {
    "colEnd": 2,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "47",
  },
]
`;

exports[`tokenizer numbers 2`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "47.01",
  },
]
`;

exports[`tokenizer numbers 3`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello",
  },
  Object {
    "colEnd": 10,
    "colStart": 6,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "1.22",
  },
  Object {
    "colEnd": 16,
    "colStart": 11,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "world",
  },
  Object {
    "colEnd": 18,
    "colStart": 17,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "2",
  },
]
`;

exports[`tokenizer numbers 4`] = `
Array [
  Object {
    "colEnd": 6,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "47e100",
  },
]
`;

exports[`tokenizer numbers 5`] = `
Array [
  Object {
    "colEnd": 4,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0x10",
  },
]
`;

exports[`tokenizer numbers 6`] = `
Array [
  Object {
    "colEnd": 10,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0xdeadbeef",
  },
]
`;

exports[`tokenizer numbers 7`] = `
Array [
  Object {
    "colEnd": 8,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0xfacade",
  },
]
`;

exports[`tokenizer numbers 8`] = `
Array [
  Object {
    "colEnd": 8,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0xFacade",
  },
]
`;

exports[`tokenizer numbers 9`] = `
Array [
  Object {
    "colEnd": 6,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0b1010",
  },
]
`;

exports[`tokenizer numbers 10`] = `
Array [
  Object {
    "colEnd": 8,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0o122345",
  },
]
`;

exports[`tokenizer numbers 11`] = `
Array [
  Object {
    "colEnd": 5,
    "colStart": 0,
    "kind": "Number",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "0o707",
  },
]
`;

exports[`tokenizer operators 1`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "@",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 2`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": ">=",
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 3`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Equals",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 4,
    "colStart": 3,
    "kind": "Equals",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 4`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "!=",
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 5`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "<",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 6`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": ">",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 7`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 6,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": ">=!@",
  },
  Object {
    "colEnd": 8,
    "colStart": 7,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 8`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "@@",
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 9`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "+",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 10`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "*",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer operators 11`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Operator",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "-",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 1`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "LeftBrace",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 5,
    "colStart": 2,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "RightBrace",
    "lineEnd": 1,
    "lineStart": 1,
  },
]
`;

exports[`tokenizer symbols 2`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "LeftParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 5,
    "colStart": 2,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "RightParen",
    "lineEnd": 1,
    "lineStart": 1,
  },
]
`;

exports[`tokenizer symbols 3`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "LeftBracket",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 5,
    "colStart": 2,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "RightBracket",
    "lineEnd": 1,
    "lineStart": 1,
  },
]
`;

exports[`tokenizer symbols 4`] = `
Array [
  Object {
    "colEnd": 3,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "wow",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Dot",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 9,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "com",
  },
]
`;

exports[`tokenizer symbols 5`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 2,
    "colStart": 1,
    "kind": "Comma",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 4,
    "colStart": 3,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Comma",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 7,
    "colStart": 6,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "c",
  },
]
`;

exports[`tokenizer symbols 6`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "DoubleArrow",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 7`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "Arrow",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 8`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Equals",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 9`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 3,
    "colStart": 2,
    "kind": "Colon",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 5,
    "colStart": 4,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer symbols 10`] = `
Array [
  Object {
    "colEnd": 1,
    "colStart": 0,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "a",
  },
  Object {
    "colEnd": 4,
    "colStart": 2,
    "kind": "ColonEquals",
    "lineEnd": 1,
    "lineStart": 1,
  },
  Object {
    "colEnd": 6,
    "colStart": 5,
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "b",
  },
]
`;

exports[`tokenizer triple-quoted strings 1`] = `
Array [
  Object {
    "colEnd": 17,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello world",
  },
]
`;

exports[`tokenizer triple-quoted strings 2`] = `
Array [
  Object {
    "colEnd": 22,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello \\"world\\" ok",
  },
]
`;

exports[`tokenizer triple-quoted strings 3`] = `
Array [
  Object {
    "colEnd": 21,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 1,
    "lineStart": 1,
    "value": "hello \\"world ok",
  },
]
`;

exports[`tokenizer triple-quoted strings 4`] = `
Array [
  Object {
    "colEnd": 18,
    "colStart": 0,
    "kind": "String",
    "lineEnd": 3,
    "lineStart": 1,
    "value": "hello

      \\"world ok",
  },
]
`;
